# bashguard

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
.github/workflows/: main.yaml
profiles/: README.md
profiles/az/: read-only.toml
profiles/docker/: read-only.toml
profiles/general/: safe-basics.toml
profiles/git/: read-only.toml
profiles/kubectl/: read-only.toml
profiles/terraform/: read-only.toml
src/: cli.rs  init.rs  lib.rs  logger.rs  main.rs  profiles.rs
src/cli/: check.rs  init.rs  profiles.rs  test.rs  validate.rs
src/cli/profiles/: install_builtins.rs
src/config/: loader.rs  mod.rs  types.rs
src/parser/: brush_adapter.rs  command.rs  lexer.rs  mod.rs  semantic.rs
src/rules/: evaluator.rs  matcher.rs  mod.rs
src/templates/: config.toml  opencodePlugin.ts
